# Fast-DDS-statistics-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  colcon.pkg  fastdds_statistics_backend.repos  package.xml  readthedocs.yaml  versions.md
docs/: CMakeLists.txt  conf.py  doxygen-config.in  index.rst  requirements.txt
docs/api-reference/: api_reference.rst
docs/api-reference/exception/: exception_index.rst
docs/api-reference/types/: statistickind.rst  types_index.rst
docs/code/: StatisticsBackendTests.cpp  datareader_info_example.json  datareader_qos_example.json  datawriter_info_example.json  datawriter_qos_example.json  domain_info_example.json  dump_example.json  graph_example.json  host_info_example.json  locator_info_example.json  participant_info_example.json  participant_qos_example.json  process_info_example.json  topic_info_example.json  user_info_example.json
docs/formalia/: titlepage.rst
docs/installation/: cmake_options.rst
docs/rst/: full_example.rst  spelling_wordlist.txt  statistics_backend.rst
docs/rst/api-reference/: api_reference.rst  statisticsbackend.rst
docs/rst/api-reference/exception/: badparameter.rst  corruptedfile.rst  error.rst  exception.rst  exception_index.rst  inconsistency.rst  nodata.rst  preconditionnotmet.rst  unsupported.rst
docs/rst/api-reference/listener/: callbackkind.rst  callbackmask.rst  domainlistener.rst  listener_index.rst  physicallistener.rst
docs/rst/api-reference/types/: alert_info.rst  bitmask.rst  datakind.rst  datakindmask.rst  domainid.rst  entityid.rst  entitykind.rst  entitystatus.rst  graph.rst  info.rst  jsontags.rst  notifier.rst  qos.rst  statistickind.rst  statisticsdata.rst  statusdata.rst  statuskind.rst  statuslevel.rst  timestamp.rst  types_index.rst
docs/rst/exports/: alias.include
docs/rst/formalia/: titlepage.rst
docs/rst/installation/: cmake_options.rst  linux_installation.rst
docs/rst/listeners/: domain_listener.rst  listeners_index.rst  physical_listener.rst
docs/rst/notes/: forthcoming_version.rst  notes.rst
docs/rst/notes/previous_versions/: v0.1.0.rst  (+17 more)
docs/rst/statistics_backend/: clear.rst  dump_load.rst  get_data.rst  get_data_supported_entity_kinds.rst  get_domain_view_graph.rst  get_entities.rst  get_graph.rst  get_info.rst  get_status.rst  get_status_data.rst  get_type.rst  init_monitor.rst  is_active.rst  is_metatraffic.rst  reset.rst  set_alert.rst  set_alias.rst  set_listeners.rst  statistics_backend.rst  stop_restart.rst
docs/rst/types/: alert_id.rst  alert_info.rst  alert_kind.rst  data_kind.rst  database_dumps.rst  entity_id.rst  entity_kind.rst  entity_status.rst  json_tags.rst  notifier.rst  statistic_kind.rst  status_kind.rst  status_level.rst  types_index.rst
docs/test/: CMakeLists.txt
src/cpp/: CMakeLists.txt  Monitor.hpp  StatisticsBackend.cpp  StatisticsBackendData.cpp  StatisticsBackendData.hpp
src/cpp/database/: data.cpp  data.hpp  database.cpp  database.hpp  database_queue.cpp  database_queue.hpp  entities.cpp  entities.cpp.unc-backup.md5~  entities.cpp.unc-backup~  entities.hpp  entities.hpp.unc-backup.md5~  samples.cpp  samples.hpp
src/cpp/detail/: ScopeExit.hpp  data_aggregation.hpp  data_getters.hpp
src/cpp/exception/: Exception.cpp  StatisticsBackendException.cpp
src/cpp/subscriber/: ProxyDiscoveryInfo.cpp  ProxyDiscoveryInfo.hpp  QosSerializer.cpp  QosSerializer.hpp  QosSerializerTags.hpp  StatisticsParticipantListener.cpp  StatisticsParticipantListener.hpp  StatisticsReaderListener.cpp  StatisticsReaderListener.hpp  UserDataContext.cpp  UserDataContext.hpp  UserDataReaderListener.cpp  UserDataReaderListener.hpp
src/cpp/topic_types/: types.cxx  types.h  types.idl  typesCdrAux.hpp  typesCdrAux.ipp  typesPubSubTypes.cxx  typesPubSubTypes.h  typesv1.cxx
src/cpp/types/: DataContainer.hpp  EntityId.cpp  JSONTags.cpp  MapDataContainer.hpp  fragile_ptr.hpp  types.cpp
test/dds/communication/: CMakeLists.txt  Communication.hpp  Communication.idl  CommunicationCdrAux.hpp  CommunicationCdrAux.ipp  CommunicationPubSubTypes.cxx  CommunicationPubSubTypes.hpp  CommunicationTypeObjectSupport.cxx  CommunicationTypeObjectSupport.hpp  Host.hpp  Monitor.cpp  MonitorDynamic.cpp  Publisher.cpp  Publisher.hpp  PublisherDynamic.cpp  Subscriber.cpp  Subscriber.hpp  SubscriberDynamic.cpp  simple_communication.py  simple_communication_dynamic.py
test/unittest/Container/: CMakeLists.txt  DataContainer_tests.cpp  MapDataContainer_tests.cpp
test/unittest/Database/: CMakeLists.txt  DataTests.cpp  DatabaseClearTests.cpp  DatabaseDeactivateTests.cpp  DatabaseDomainViewGraph.cpp  DatabaseDomainViewGraphTests.cpp  DatabaseDumpTests.cpp  DatabaseEraseTests.cpp  DatabaseGetEntitiesTest.cpp  DatabaseLoadAndDumpTests.cpp  DatabaseLoadInsertTests.cpp  DatabaseLoadTests.cpp  DatabaseProcessEntitiesTests.cpp  DatabaseStatusTests.cpp  DatabaseTests.cpp  SampleTests.cpp
test/unittest/DatabaseQueue/: CMakeLists.txt  DatabaseQueueTests.cpp
test/unittest/DdsVendor/: CMakeLists.txt  DdsVendorTests.cpp
test/unittest/EntityId/: CMakeLists.txt  EntityIdTests.cpp
test/unittest/QosSerializer/: CMakeLists.txt  QosSerializerTests.cpp
test/unittest/StatisticsBackend/: BackendDumpTests.cpp  CMakeLists.txt  CallingUserListenersTests.cpp  ClearDataTests.cpp  ClearEntitiesTests.cpp  GetDataTests.cpp  GetStatusDataTests.cpp  InitMonitorFactoryFailsTests.cpp  InitMonitorTests.cpp  IsActiveTests.cpp  IsMetatrafficTests.cpp  IsProxyTests.cpp  LoadXmlProfilesFileTests.cpp  SpyTopicsTests.cpp  StatisticsBackendTests.cpp  profile.xml  test_load_profile.xml
test/unittest/StatisticsParticipantListener/: CMakeLists.txt  StatisticsParticipantListenerTests.cpp
test/unittest/StatisticsReaderListener/: CMakeLists.txt  StatisticsReaderListenerTests.cpp
test/unittest/TrafficInjector/: CMakeLists.txt  TrafficInjectorTests.cpp  profile.xml  traffic_dump.json
test/unittest/UserDataReaderListener/: CMakeLists.txt  UserDataReaderListenerTests.cpp
test/unittest/database/: CMakeLists.txt  database_queue_tests.cpp
test/unittest/fragile_ptr/: CMakeLists.txt  fragile_ptr_tests.cpp
(+282 files in other folders)
