<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastdds_statistics_backend</name>
  <!-->There must be a release. Update version accordingly<-->
  <version>0.6.0</version>
  <description>
    C++ library to collect data from eProsima Fast DDS Statistics module and generate statistical information.
  </description>
  <!-->Update maintainer information<-->
  <maintainer email="eduardoponz@eprosima.com">Eduardo Ponz Segrelles</maintainer>
  <maintainer email="ikerluengo@eprosima.com">Iker Luengo Gil</maintainer>
  <maintainer email="joseluisbueno@eprosima.com">Jose Luis Bueno Lopez</maintainer>
  <maintainer email="miguelcompany@eprosima.com">Miguel Company Company</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS-statistics-backend/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS-statistics-backend</url>

  <depend>fastcdr</depend>
  <depend>fastrtps</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
