<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastdds_statistics_backend</name>
  <!-->There must be a release. Update version accordingly<-->
  <version>2.4.0</version>
  <description>
    C++ library to collect data from eProsima Fast DDS Statistics module and generate statistical information.
  </description>
  <!-->Update maintainer information<-->
  <maintainer email="RaulSanchezMateos@eprosima.com">Raul Sánchez-Mateos</maintainer>
  <maintainer email="emiliocuesta@eprosima.com">Emilio Cuesta</maintainer>
  <maintainer email="miguelcompany@eprosima.com">Miguel Company</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Fast-DDS-statistics-backend/issues</url>
  <url type="repository">https://github.com/eProsima/Fast-DDS-statistics-backend</url>

  <depend>fastcdr</depend>
  <depend>fastdds</depend>
  <depend>tinyxml2</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
